# MusicVisualizer

./: CMakeLists.txt  Makefile  README.md  TODO.md  TODO.txt  UdpServer.cpp  UdpServer.h  keyboard_input.cpp  main  main.cpp  main.h  pulse_interface.cpp  pulse_interface.h  pulse_interface_testing.cpp  run.sh
Opengl/: Makefile  get_sinks.cpp  keyboard_input.cpp  main.cpp  main.h  main2.cpp  main3.cpp  main3.h  pulse_interface.h
include/: keyboard_input.h  main.h  pulse_interface.h
src/: keyboard_input.cpp  main.cpp  pulse_interface.cpp
testing/: Makefile  pulse_interface_testing.cpp
tests/: CMakeLists.txt  pulse_interface_test.cpp
